[project]
name = "hook-study-one"
version = "0.1.0"
description = "day 01"
authors = [
    {name = "sensure", email = "sensuredark@sina.com"},
]
dependencies = [
    "pytest>=8.0.2",
    "itchat>=1.3.10",
    "wxpy>=0.3.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "mmmmmiiiiitttttt"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]

