[project]
name = "hook-study-one"
version = "0.1.0"
description = "day 01"
authors = [
    {name = "sensure", email = "sensuredark@sina.com"},
]
dependencies = [
    "pytest>=8.1.1",
    "itchat>=1.3.10",
    "wxpy>=0.3.2",
    "black>=24.2.0",
    "flake8>=7.0.0",
    "isort>=5.13.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "mmmmmiiiiitttttt"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "tox-pdm>=0.7.2",
]
[tool.isort]
profile = "black"
multi_line_output = 3
[tool.black]
exclude = '''.venv,.git,__pycache__,dist'''


[tool.pdm.scripts]
check = {composite=[
    "isort .",
    "black .",
    "flake8 .",
]}

test = "pytest"
#lint = "flake8"
#test = "pytest"
#sort = "isort"
#black = "black"
#all = {composite = ["black ./src","sort","lint","test"]}